fix(site): disable scrollbar styling

--- a/app/src/styles/reset.css
+++ b/app/src/styles/reset.css
@@ -30,16 +30,6 @@ h6 {
   overflow-wrap: break-word;
 }
 
-*::-webkit-scrollbar {
-  width: 0.5rem;
-  height: 0.5rem;
-  background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb,
-*::-webkit-scrollbar-track {
-  background-color: transparent;
-}
 
 html,
 body,
