--- a/site/src/styles/reset.css
+++ b/site/src/styles/reset.css
@@ -66,19 +66,3 @@ h6 {
 #root {
   isolation: isolate;
 }
-
-* {
-  scrollbar-width: 0.1rem;
-  scrollbar-color: transparent transparent;
-}
-
-*::-webkit-scrollbar {
-  width: 0.5rem;
-  height: 0.5rem;
-  background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb,
-*::-webkit-scrollbar-track {
-  background-color: transparent;
-}
